--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="ontherole-website.css">
+<link rel="icon" 
+      type="image/png" 
+      href="fav.png">    
+                      
 
     
         <script language="javascript" type="text/javascript" src="libraries/jquery-3.2.1.min.js"></script>
