--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ $("#image-pequeno").hide();
     <div id="images">
         <img src="https://i.imgur.com/wG8qj1n.png" class="images-questions" id="image-pequeno" style="left:5vw; top: 60vh; width:300px;position: absolute;
     z-index: 3000;">
-        <img src="https://i.imgur.com/wG8qj1n.png" id="image-pequeno2" style="left:73vw; top: 60vh; width:300px;position: absolute; z-index: 3000;">
+        <img src="https://i.imgur.com/wG8qj1n.png" class="images-questions" id="image-pequeno2" style="left:73vw; top: 60vh; width:300px;position: absolute; z-index: 3000;">
         <img src="https://i.imgur.com/Xxx61Fm.png" class="images-questions" id="image-medio" style="left:72vw; top:35vh;">
         <img src="https://i.imgur.com/DXrSonR.png" class="images-questions" id="image-grande" style="left:5vw; top:30vh;">
     </div>
