--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@ $("#image-pequeno").hide();
 <body>
 
     <div id="images">
-        <img src="https://i.imgur.com/wG8qj1n.png" class="images-questions" id="image-pequeno" style="left:5vw; top: 60vh; width:300px;position: absolute;
+        <img src="https://i.imgur.com/wG8qj1n.png" class="images-questions" id="image-pequeno" style="left:5vw; top: 60vh; width:300px;position: absolute;display:none;
     z-index: 3000;">
-        <img src="https://i.imgur.com/wG8qj1n.png" class="images-questions" id="image-pequeno2" style="left:73vw; top: 60vh; width:300px;position: absolute; z-index: 3000;">
-        <img src="https://i.imgur.com/Xxx61Fm.png" class="images-questions" id="image-medio" style="left:72vw; top:35vh;">
-        <img src="https://i.imgur.com/DXrSonR.png" class="images-questions" id="image-grande" style="left:5vw; top:30vh;">
+        <img src="https://i.imgur.com/wG8qj1n.png" class="images-questions" id="image-pequeno2" style="left:73vw; top: 60vh; width:300px;position: absolute; z-index: 3000;display:none;">
+        <img src="https://i.imgur.com/Xxx61Fm.png" class="images-questions" id="image-medio" style="left:72vw; top:35vh; display:none;">
+        <img src="https://i.imgur.com/DXrSonR.png" class="images-questions" id="image-grande" style="left:5vw; top:30vh;display:none;">
     </div>
 
     <div id="main">
